--- a/css/photoslurp.css
+++ b/css/photoslurp.css
@@ -31,5 +31,8 @@
 
 #campagnolo-carousel-home .ps-carousel.ps-theme-modern .ps-carousel-slider.ps-slider-horizontal nav span.ps-prev {
     left: -50px !important;
+}
 
-
+#campagnolo-carousel-product .ps-carousel.ps-theme-modern .ps-carousel-slider.ps-slider-horizontal .ps-image img {
+object-fit: cover !important;
+}
