linking the logo product page to the index + resizing padding on load more button to center vertically

--- a/css/photoslurp.css
+++ b/css/photoslurp.css
@@ -36,3 +36,7 @@
 #campagnolo-carousel-product .ps-carousel.ps-theme-modern .ps-carousel-slider.ps-slider-horizontal .ps-image img {
 object-fit: cover !important;
 }
+
+#product-carousel-heading {
+    
+}
